force-app/src/objects/TR1__Application_V2__c.object
<CustomObject>
    <description>Used for ATS new data model designed.</description>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only candidates can be selected as applicants</errorMessage>
            <filterItems>
                <field>Contact.TR1__Is_Select_Candidate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applications V2</relationshipLabel>
        <relationshipName>Application1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__AtsV1_Id__c</fullName>
        <description>Id of the ATSv1 record this was converted from.</description>
        <inlineHelpText>If this record was created during a conversion from ATSv1 this field contains the id of the ATSv1 record it was converted from</inlineHelpText>
        <label>ATS V1 recordId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candidate_Summary__c</fullName>
        <inlineHelpText>Please enter brief Summary</inlineHelpText>
        <label>Candidate Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Applications V2</relationshipLabel>
        <relationshipName>Applications_V2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Email__c</fullName>
        <formula>TR1__Applicant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hourly_Rate_Offered__c</fullName>
        <label>Hourly Rate Offered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__In_Progress_Stages__c</fullName>
        <description>Used for capturing in progress stages. No need to display on page layouts.</description>
        <inlineHelpText>In progress stage indexes (e.g.: 0;3;5)</inlineHelpText>
        <label>In Progress Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Board_Source__c</fullName>
        <label>Job Board Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Company Website</fullName>
                </value>
                <value>
                    <fullName>Google Search</fullName>
                </value>
                <value>
                    <fullName>Yahoo Search</fullName>
                </value>
                <value>
                    <fullName>Bing Search</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>SoCRA</fullName>
                </value>
                <value>
                    <fullName>ISPE</fullName>
                </value>
                <value>
                    <fullName>SCDM</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>RAPS</fullName>
                </value>
                <value>
                    <fullName>Net-Temps</fullName>
                </value>
                <value>
                    <fullName>NACCB</fullName>
                </value>
                <value>
                    <fullName>Job Fair</fullName>
                </value>
                <value>
                    <fullName>Careerbuilder</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>Ad</fullName>
                </value>
                <value>
                    <fullName>ACRP</fullName>
                </value>
                <value>
                    <fullName>DICE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_First_Name__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Phone__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName &amp; &quot; &quot; &amp;  TR1__Job__r.TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipName>Application1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Job_s_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job&apos;s Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Mobile__c</fullName>
        <formula>TR1__Applicant__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Schedules__c</fullName>
        <label>Number of Schedules</label>
        <summaryForeignKey>TR1__Send_Out_Schedule_V2__c.TR1__Application_V2__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TR1__Off_Limit__c</fullName>
        <formula>IF($Setup.TR1__Executive_Search__c.TR1__Enable_Off_Limit_Policies__c, TR1__Applicant__r.TR1__Off_Limit_Info__r.TR1__Off_Limit_Reason__c,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Off Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Opportunity_Discussed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Discussed</label>
        <referenceTo>TR1__Opportunity_Discussed__c</referenceTo>
        <relationshipName>Applications3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Phone__c</fullName>
        <formula>TR1__Applicant__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Candidate Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Ranking_Group__c</fullName>
        <description>Application Ranking Group</description>
        <inlineHelpText>Application Ranking Group</inlineHelpText>
        <label>Ranking Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Rank 1</fullName>
                </value>
                <value>
                    <fullName>Rank 2</fullName>
                </value>
                <value>
                    <fullName>Rank 3</fullName>
                </value>
                <value>
                    <fullName>Rank 4</fullName>
                </value>
                <value>
                    <fullName>Rank 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Method__c</fullName>
        <description>Application Rejection Method</description>
        <label>Rejection Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-mail</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <label>Rejection/Undo Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Origin__c</fullName>
        <description>The entity that initiated the rejection</description>
        <inlineHelpText>The entity that initiated the rejection</inlineHelpText>
        <label>Rejection Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Candidate</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Reason__c</fullName>
        <description>Application Rejection Reason</description>
        <label>Rejection Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unqualified - skills</fullName>
                </value>
                <value>
                    <fullName>Unqualified - experience</fullName>
                </value>
                <value>
                    <fullName>Unqualified - education</fullName>
                </value>
                <value>
                    <fullName>Availability does not match</fullName>
                </value>
                <value>
                    <fullName>Candidate withdrew</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Salary_Offered__c</fullName>
        <label>Salary Offered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Skipped_Stages__c</fullName>
        <description>Used for capturing skipped stages for calculating stage chevron in backend. No need to display on page layouts.</description>
        <label>Skipped Stages</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Source_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lookup field that displays the Job from which the Application has been created (using &quot;Apply to Other Job&quot;)</description>
        <inlineHelpText>The Lookup field that displays the Job from which the Application has been created (using &quot;Apply to Other Job&quot;)</inlineHelpText>
        <label>Source Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Applications V2 (Source Job)</relationshipLabel>
        <relationshipName>Applications_V2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Job Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <description>Helps to identify the stage of the Application</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Send Out</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
                <value>
                    <fullName>Closing Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Application V2</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Applicant__c</columns>
        <columns>TR1__Job__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>APP-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications V2</pluralLabel>
    <recordTypes>
        <fullName>TR1__Application</fullName>
        <active>true</active>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Consulting</fullName>
        <active>true</active>
        <description>Related to Job Consulting Record Type</description>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Fixed_Term_Booking</fullName>
        <active>true</active>
        <description>Related to Job Fixed Term Booking Record Type</description>
        <label>Fixed Term Booking</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Permanent</fullName>
        <active>true</active>
        <description>Related to Job Permanent Record Type</description>
        <label>Permanent</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Retained</fullName>
        <active>true</active>
        <description>Related to Job Retained Record Type</description>
        <label>Retained</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>